# comcheckweb-api-python

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SETUP-WITH-AI.md  example.env  fetch_comcheck_schema.sh  generated_bgwall_variants.py  mkdocs.yml  pyproject.toml
.cursor/rules/: comcheck.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  publish.yml  test.yml
AI/: 01-options-overview.md  02-llms-txt.md  03-mcp-server.md  04-claude-skill.md  05-comparison.md  06-rag-and-s3-vectors.md  07-implementation-plan.md  08-agent.md  09-supporting-agent-repo.md  10-approach-2-implementation-plan.md  README.md  agent.md  claude-skill.md  implementation-plan.md  skills.md  supporting-agent-repo.md
comcheck_api/: __init__.py  cli.py  comcheck_client.py  defaults.py  exceptions.py  get_project_default.py  introspection.py  validation.py
comcheck_api/ai/: CLAUDE.md  __init__.py  content.py
comcheck_api/ai/skill/: SKILL.md  __init__.py
comcheck_api/ai/tools/: __init__.py  lookup.py  projects.py  simulation.py  validation.py
comcheck_api/api/: __init__.py  api_services.py
comcheck_api/client/: __init__.py  comcheck_client.py
comcheck_api/components/: building_area.py
comcheck_api/components/envelope/: ag_wall.py  bg_wall.py  door.py  floor.py  roof.py  skylight.py  window.py
comcheck_api/constants/: building_area_constants.py  common_constants.py  envelope_constants.py  exterior_lighting_constants.py  interior_lighting_constants.py
comcheck_api/managers/: data_manager.py
comcheck_api/mcp/: __init__.py  clients.py  server.py  setup.py
comcheck_api/projectOperations/: project_building_area_operations.py  project_envelope_operations.py
comcheck_api/project_operations/: __init__.py  project_building_area_operations.py  project_envelope_operations.py  project_exterior_lighting_operations.py  project_interior_lighting_operations.py
comcheck_api/schemas/: aliases.json  aliases2.json  comCheck.schema.json  custom_base_model.py  default_values.json  generate_core_types.py  generate_variants.py  model_variants.yml
comcheck_api/types/: __init__.py  api_types.py  common_types.py  core_types.py  core_types_variants.py  core_types_with_defaults.py  custom_base_model.py  test.py
comcheck_api/utilities/: common.py  data_manager.py  envelope_utilities.py  get_project_default.py  id_registry.py  model_utilities.py  project_utilities.py
docs/: IMPROVEMENTS.md  README.md  VERSION_CONTROL.md  operations_expansion_plan.md
docs_site/: getting-started.md  index.md  llms-full.txt  llms.txt  simulation.md  types-guide.md
docs_site/api/: api-service.md  client.md  compliance.md  defaults.md  exceptions.md  introspection.md  simulation.md
docs_site/api/constants/: building-area.md  common.md  envelope.md
docs_site/api/managers/: building-area.md  data-manager.md  envelope.md
docs_site/api/operations/: building-area.md  credits.md  envelope.md  mechanical.md  (+3 more)
examples/: README.md
examples/client/: assemblies.py  compliance_and_report.py  simulation.py  user_functions.py
examples/data_manager/: building_area.py  envelope.py
examples/project_operations/: building_area_operations.py  envelope_operations.py  exterior_lighting_operations.py  interior_lighting_operations.py
fixtures/: components.py
pytest_fixtures/: components.py
scripts/: README.md  build_ai_assets.py  comcheck_project_script.py  main.py  project_operations_script.py  script_test_data.py  simulation_script.py
scripts/buildingAreaScripts/: building_area_script.py
scripts/comcheck_client_tests/: simulation_script.py  user_function_script.py
scripts/envelopeScripts/: ag_wall_script.py  bg_wall_script.py  door_script.py  floor_script.py  roof_script.py  window_script.py
scripts/project_operations_tests/: building_area_operations_script.py  envelope_operations_script.py
src/: __init__.py  comcheck_client.py  get_project_default.py
src/api/: api_services.py
src/components/: building_area.py
src/constants/: building_area_constants.py  envelope_constants.py
src/projectOperations/: __init__.py  project_building_area_operations.py  project_envelope_operations.py
src/schemas/: comCheck.schema.json  generate_core_types.py  schema_generate.py
src/types/: __init__.py  api_types.py  core_types.py
src/utilities/: __init__.py  common.py  data_manager.py  envelope_utilities.py
tests/: README.md  conftest.py  test_base_model.py  test_comcheck_client.py
tests/client/: test_simulation.py  test_user_functions.py
tests/data_manager_tests/: test_data_manager.py
tests/envelope_tests/: conftest.py  integrated.py  simulation_workflow.py  test_bg_wall_list_manager.py  test_door_list_manager.py  test_floor_list_manager.py  test_roof_list_manager.py  test_window_list_manager.py
tests/project_operation_tests/: conftest.py  test_building_area_operations.py  test_envelope_operations.py  test_exterior_lighting_operations.py  test_interior_lighting_operations.py
tests/test_data/: sample_project.json
tests/utility_tests/: model_utility_tests.py
tools/: fetch_comcheck_schema.sh  generate_core_types.py  generate_variants.py  generate_variants_2.py
tools/scripts/: README.md  main.py  script_test_data.py
(+45 files in other folders)
