[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comcheck_api"
version = "1.0.0"
description = "COMcheck Web API Python Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "types-jsonschema>=4.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["comcheck_api"]

[tool.uv.workspace]
members = []

[tool.uv.sources]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "datamodel-code-generator>=0.54.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = [
    "^comcheck_api/types/core_types\\.py$"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
