[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comcheck_api"
version = "1.0.1"
description = "COMcheck API Python Package"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Yanyan Zhu", email = "yanyan.zhu@pnnl.gov" },
]
maintainers = [
    { name = "Yanyan Zhu", email = "yanyan.zhu@pnnl.gov" },
    { name = "Weili Xu", email = "weili.xu@pnnl.gov" },
]
keywords = [
    "comcheck",
    "compliance",
    "simulation",
    "energy code",
    "ashrae 90.1",
    "IECC",
]

dependencies = [
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "types-jsonschema>=4.23.0",
]

[project.urls]
Homepage = "https://pnnl.github.io/comcheckweb-api-python/"
Documentation = "https://pnnl.github.io/comcheckweb-api-python/"
Repository = "https://github.com/pnnl/comcheckweb-api-python"

[project.scripts]
comcheck-api = "comcheck_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["comcheck_api"]
include = [
  "comcheck_api/ai/skill/**/*.md",
  "comcheck_api/ai/skill/**/*.py",
]

[tool.hatch.build.targets.wheel.force-include]
"DISCLAIMER.md" = "comcheck_api/DISCLAIMER.md"

[tool.uv.workspace]
members = []

[tool.uv.sources]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "datamodel-code-generator>=0.54.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = [
    "^comcheck_api/types/core_types\\.py$"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
